	description to avoid writing extremely long description line
	* tests/Makefile.am: update case 2 of check-ibis to accommodate
	mixing of output from stdout with stderr
	* src/part.cpp: updateMetaData and setMeshShape invoke write lock
	before calling writeMetaData
	* src/capi.cpp: invoke updateMetaData when fastbit_build_index
	came with an explicit indexing option

2012-02-13 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/capi.cpp:260 check null pointer before attempt to build
	indexes

2012-02-10 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: update column::write to handle unsigned types
	separately, add specific cases for min and max of LONG and ULONG
	(as doubles)
	* src/category.cpp: update category::write to limit the size of
	description to be no more than a couple of hundred characters

2012-02-09 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: capture min and max after index creation.

2012-02-07 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: change the default log output to stderr (following
	the C++ iostream convention where cerr and clog are the same
	stream)
	* tests/Makefile.am: change the log file from stdout.log to
	std.log
	* src/bord.cpp: modify bord::copyColumn to use getColumn instead
	of its own procedure for finding the named column; evaluateTerms
	assigns the values to cd too early, the actual strings in cdesc
	could moved
	* src/quaere.cpp: in ibis::quaere::create, make sure prts is
	passed down to the filter object

2012-02-06 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp: change selectClause::fillNames to make
	sure the names used match the SQL convention

2012-02-03 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: add argument three to doJoin to ensure can
	use a different list of tables than ibis::datasets
	* src/util.cpp: change util::getLogFile to use setLogFile (to make
	sure the log file is initialized exacty the same way no matter how
	it is generated)
